--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,32 @@
-name: Docker
+name: CI
 
 on:
   push:
     branches: [master]
     tags: ["v*"]
+  pull_request:
+    branches: [master]
 
 env:
+  CARGO_TERM_COLOR: always
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+      - name: Clippy
+        run: cargo clippy --all --all-targets --all-features -- -Dwarnings -Adeprecated
+
   build-and-push:
+    if: github.event_name == 'push'
+    needs: validate
     runs-on: ubuntu-latest
     permissions:
       contents: read
